--- a/yoga/stylesheets/screen.css
+++ b/yoga/stylesheets/screen.css
@@ -149,8 +149,9 @@ a {
 }
 
 /* line 81, ../sass/screen.scss */
-#header.default #logo {
-  margin: 1px auto 0;
+#header.default #logo img{
+    margin-top: 0;
+    height: 50px;
 }
 
 /* line 85, ../sass/screen.scss */
