--- a/M-store/css/style.css
+++ b/M-store/css/style.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Oswald:400,300,700);
+@import url('https://fonts.googleapis.com/css?family=Oswald');
 
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -15,7 +15,6 @@ menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
 	margin: 0;
 	padding: 0;
-	border: 0;
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
@@ -58,85 +57,114 @@ a, a:hover {color: #000; text-decoration: none;}
 	margin: 0 auto;
 }
 
-
 #wrapper {
 	min-height: 100%;
 	height: auto !important;
 	height: 100%;
 }
-/* Панель в шапке */
+
 .panel-top {
 	height: 33px;
 	border-top: 3px solid #CC3333;
-	background: #2A2B2C;
+	background: #2A2B2C; 
 }
-/* Социальные сети */
+
 .social {
+	padding: 2px 0;
 	float: left;
-	padding: 4px 0;
 }
+
 .social a {
 	display: inline-block;
 	height: 23px;
 	width: 23px;
+	margin: 2px 0;
 	vertical-align: middle;
-	background: url(../img/sprite-social.png) no-repeat center;
 	-webkit-border-radius: 50%;
 	   -moz-border-radius: 50%;
-		 -o-border-radius: 50%;
-			border-radius: 50%;
-}
-.social a.s-fb {background-position: 0 0;}
-.social a.s-dribble {background-position: -23px 0;}
-.social a.s-tw {background-position: -46px 0;}
-.social a.s-mail {background-position: -69px 0;}
-.social a.s-vimeo {background-position: -92px 0;}
+	     -o-border-radius: 50%;
+	     	border-radius: 50%;
 
-/* Вход на сайт*/
+	background: url(../img/sprite-social.png) no-repeat center;
+}
+
+.social .s-fb {
+	background-position: 0 0;
+}
+.social .s-dribble {
+	background-position: -23px 0;
+}
+.social .s-tw {
+	background-position: -46px 0;
+}
+.social .s-mail {
+	background-position: -69px 0;
+}
+.social .s-vimeo {
+	background-position: -92px 0;
+}
+
 .login {
 	float: right;
-	padding-top: 7px;
+	padding-top: 8px;
 }
-.login a,
-.login span {color: #fff;}
-.login a:hover {text-decoration: underline;}
 
-/* Корзинка */
+.login a, .login span {
+	color: #fff;
+}
+.login a:hover {
+	text-decoration: underline;
+	vertical-align: middle;
+}
+
 .basket {
-	width: 90px;
-	float: right;
+	width: 100px;
+	height: 45px;
 	margin-left: 25px;
-	background: #C33 url(../img/cart.png) no-repeat 8px 7px;
-	-webkit-border-radius: 0 0 10px 10px;
-	   -moz-border-radius: 0 0 10px 10px;
-		 -o-border-radius: 0 0 10px 10px;
-			border-radius: 0 0 10px 10px;
+	background: #CC3333 url(../img/cart.png) no-repeat 8px 7px;
+	float: right;
+	-webkit-border-radius:0 0 10px 10px;
+	   -moz-border-radius:0 0 10px 10px;
+	     -o-border-radius:0 0 10px 10px;
+	     	border-radius:0 0 10px 10px;
 	overflow: hidden;
 }
+
 .basket a {
 	display: block;
 	height: 45px;
+	color: #fff;
 	padding: 15px 0 0 40px;
 	color: #fff;
 }
-/* Шапка сайта*/
-#header {padding: 18px 0;}
 
-/* Логотип */
+#header {
+	padding: 18px 0;	
+}
+
 #logo img,
 #logo span {
 	display: inline-block;
 	vertical-align: middle;
 }
-#logo span {font-size: 30px;}
 
-/* Навигация */
-.nav {margin-top: 25px;}
+#logo span {
+	font-size: 30px;
+}
+
+.nav {	
+	margin-top: 30px;
+}
+
 .nav li {
 	position: relative;
 	float: left;
 }
-.nav li + li {margin-left: 30px;}
+
+.nav li + li {
+	margin-left: 30px;
+}
+
 .nav li:before {
 	content: "";
 	position: absolute;
@@ -145,55 +173,59 @@ a, a:hover {color: #000; text-decoration: none;}
 	margin-left: -18px;
 	display: none;
 	width: 35px;
- 	border-top: 4px solid #efc539;
- }
+	border-top: 4px solid #efc539;
+}
+
 .nav li:hover:before,
-.nav li.active:before {display: block;}
-.nav li a {
-	font-weight: bold;
+.nav li.active:before {
+	display: block;
+}
+
+.nav a {
 	font-size: 14px;
-	text-transform: uppercase;
+	font-weight: bold;
 }
 
 #home {
 	margin-bottom: 40px;
 	padding-bottom: 8px;
 	border-bottom: 1px solid #e0e0e0;
-	background: #fff;
+	background: #fff;		
 }
 
 .home-bg {
 	padding: 20px 0;
 	background: #cc3333;
-	
 	-webkit-box-shadow: inset 0 5px 5px rgba(0,0,0,.25);
-	-moz-box-shadow: inset 0 5px 5px rgba(0,0,0,.25);
-	-ms-box-shadow: inset 0 5px 5px rgba(0,0,0,.25);
-	-o-box-shadow: inset 0 5px 5px rgba(0,0,0,.25);
-	box-shadow: inset 0 5px 5px rgba(0,0,0,.25);
+	   -moz-box-shadow: inset 0 5px 5px rgba(0,0,0,.25);
+		-ms-box-shadow: inset 0 5px 5px rgba(0,0,0,.25);
+		 -o-box-shadow: inset 0 5px 5px rgba(0,0,0,.25);
+			box-shadow: inset 0 5px 5px rgba(0,0,0,.25);
 }
 
 .title-home {
-	font: normal 28px 'Oswald', sans-serif;
+	font: 28px 'Oswald', sans-serif;
 	color: #fff;
 	text-transform: uppercase;
-	-wekbit-text-shadow: 0 1px 1px rgba(0,0,0,.25);
-	-moz-text-shadow: 0 1px 1px rgba(0,0,0,.25);
-	-o-text-shadow: 0 1px 1px rgba(0,0,0,.25);
-	text-shadow: 0 1px 1px rgba(0,0,0,.25);
+	-webkit-text-shadow: 0 1px 1px rgba(0,0,0,.25);
+	   -moz-text-shadow: 0 1px 1px rgba(0,0,0,.25);
+		-ms-text-shadow: 0 1px 1px rgba(0,0,0,.25);
+		 -o-text-shadow: 0 1px 1px rgba(0,0,0,.25);
+			text-shadow: 0 1px 1px rgba(0,0,0,.25);
 }
 
-.breadcrumbs li {
+.breadcrumbs li{
 	float: left;
 }
 .breadcrumbs li a,
 .breadcrumbs li span {
-	font-size: 12px;
+	font-size: 12px;	
 	color: #fff;
-	-wekbit-text-shadow: 0 1px 1px rgba(0,0,0,.25);
-	-moz-text-shadow: 0 1px 1px rgba(0,0,0,.25);
-	-o-text-shadow: 0 1px 1px rgba(0,0,0,.25);
-	text-shadow: 0 1px 1px rgba(0,0,0,.25);
+	-webkit-text-shadow: 0 1px 1px rgba(0,0,0,.25);
+	   -moz-text-shadow: 0 1px 1px rgba(0,0,0,.25);
+		-ms-text-shadow: 0 1px 1px rgba(0,0,0,.25);
+		 -o-text-shadow: 0 1px 1px rgba(0,0,0,.25);
+			text-shadow: 0 1px 1px rgba(0,0,0,.25);	 
 }
 
 .breadcrumbs li .sp {
@@ -206,73 +238,85 @@ a, a:hover {color: #000; text-decoration: none;}
 	text-decoration: underline;
 }
 
-.link-home {
+.home-icon {
 	display: inline-block;
-	float: right;
-	width: 36px;
 	height: 33px;
-	margin-top: 12px;
-	background: url(../img/home.png) no-repeat;
+	width: 36px;
+	margin-top: 6px;
+	float: right;
+	background: url(../img/home-icon.png) no-repeat
 }
 
-.sorting {
+.sorting {	
+	height: 60px;
+	padding:20px 0 20px 20px;
 	margin-bottom: 40px;
-	padding: 18px 20px;
 	border: 1px solid #eaeaea;
 	background: #fff;
-	-webkit-border-radius: 3px;
-	-moz-border-radius: 3px;
-	-o-border-radius: 3px;
-	border-radius: 3px;
+	-webkit-border-right: 3px;
+	   -moz-border-right: 3px;
+	     -o-border-right: 3px;
+	        border-right: 3px;
 }
 
-.s-category {
+.genres{float: left;}
+
+.genres li {
 	float: left;
-	padding-top: 2px;
-}
-.s-category li {
 	padding: 0 15px 0 9px;
-	float: left;
-	background: url(../img/s-sp.png) no-repeat right 4px;
+	background: url(../img/dots.png) no-repeat right center;
 }
-.s-category li:first-child {padding-left: 0;}
-.s-category li:last-child {
+.genres li:first-child {padding-left: 0;}
+.genres li:last-child {
 	background-image: none;
 	padding-right: 0;
 }
-.s-category a {
-	line-height: 16px;
-	color: #1E1E20;
+
+.genres a {
+	color: #605f5f;
+	font: 14px/16px arial;
 	text-transform: uppercase;
 }
-.s-category a:hover,
-.s-category li.active a {
+.genres a:hover,
+.genres li.active a {
 	color: #000;
 }
 
-.sel-sorting {
+.sort-view {
+	float: right;
+	margin-right: 20px;
+}
+
+.sort-view a {
+	display: inline-block;
+	vertical-align: middle;
+	height: 20px;
+	width: 30px;
+}
+.sort-view a + a {
+	margin-left: 10px;
+}
+
+.s-squares {
+	background: url(../img/sort-squares.png) no-repeat;
+	cursor: pointer;
+}
+.s-squares:hover {
+	background: #EAEAEA url(../img/sort-squares.png) no-repeat;
+}
+
+.s-list {
+	background: url(../img/sort-list.png) no-repeat;
+	cursor: pointer;
+}
+.s-list:hover {
+	background: #EAEAEA url(../img/sort-list.png) no-repeat;
+}
+
+.sort-by {
 	float: right;
 	margin-right: 80px;
 }
-
-.s-lsit {float: right;}
-.s-lsit a {
-	display: inline-block;
-	vertical-align: middle;
-}
-.s-lsit a + a {margin-left: 10px;}
-.ic-squares {
-	width: 28px;
-	height: 20px;
-	background: url(../img/squares.png) no-repeat;
-}
-.ic-list {
-	width: 30px;
-	height: 20px;
-	background: url(../img/list.png) no-repeat;
-}
-
-
 
 .middle {
 	padding-bottom: 300px;
@@ -287,27 +331,32 @@ a, a:hover {color: #000; text-decoration: none;}
 	position: relative;
 	margin: 0 0 10px;
 	padding: 0 0 15px 15px;
-	font: normal 18px/20px 'Oswald', sans-serif;
-	color: #2A2B2C;
+	font: normal 18px/12px 'Oswald', sans-serif;
 	text-transform: uppercase;
+	color: #2A2B2C;
 	border-bottom: 1px dotted #d5d5d5;
 }
-.s-title .s-title-br {
+
+.s-title-br {
 	position: absolute;
 	top: 100%;
 	left: 0;
 	z-index: 1;
 	width: 40px;
 	height: 7px;
-	margin-top: -3px;
+	margin-top: -3px;  
 	background: #cc3333;
 }
 
 .s-products {
-	margin: 15px 0 0;
-	padding-left: 15px;
+	margin: 15px 0 10px;
+	padding-bottom: 10px;
 }
-.s-products-item {margin-bottom: 10px;}
+
+.s-products-item {
+	margin-bottom: 10px;
+}
+
 .s-products-img {
 	height: 90px;
 	width: 90px;
@@ -316,124 +365,151 @@ a, a:hover {color: #000; text-decoration: none;}
 	padding: 5px;
 	background: #44484e;
 }
-.s-products-img img {
+
+.s-products-img  img {
 	display: block;
-	width: 100%;
+	width: 100%;2
 }
 
 .s-products-info {
-	padding-top: 10px;
+	padding-top: 1px;
 	margin-left: 105px;
 }
 
-.s-products-info h6 {
-	margin-top: 0 !important;
-}
-.commetns {
+.comments {
 	font-size: 11px;
-	color: #1E1E20;
+	color: #858585;
 	text-transform: uppercase;
 }
-.ic-comment, .ic-comment-white {
+
+.ic-comments {
 	display: inline-block;
 	vertical-align: middle;
 	height: 18px;
 	width: 13px;
-	background: url(../img/comments.png) no-repeat center;
-}
-.ic-comment-white {
-	background: url(../img/comments-white.png) no-repeat center;
+	margin-right: 5px;
+	background: url(../img/comments.png) no-repeat center
 }
 
-.cat-lsit {
-	margin: 10px 0 30px 0;
-	padding-left: 15px;
-	list-style: url(../img/cat-list-style.png);
-	list-style-position: inside; 
-}
-.cat-lsit li {
-	padding: 10px 0; 
-	border-bottom: 1px dotted #9FA0A1;
-}
-.cat-lsit li:last-child {
-	border: none;
+.cat-list {
+	margin: 15px 0 30px 0;
+	list-style: url(../img/li-marker.png);
+	list-style-position: inside;
 }
 
-.cat-lsit li a {
+.cat-list li {
+	padding: 10px 15px;
+	border-bottom: 1px dotted #9fa0a1;
+}
+.cat-list li:last-child {
+	border-bottom: none;
+}
+
+.cat-list a {
 	font-weight: bold;
+	color: #2A2B2C;
 }
-.cat-lsit li a:hover {
+.cat-list a:hover {
 	text-decoration: underline;
 }
 
-.cat-lsit li span {
+.cat-list span {
 	display: inline-block;
-	margin-left: 5px;
 	color: #7D7E7E;
+	margin-left: 5px;
 }
-.s-search {
+
+#s-search {
 	position: relative;
-	margin-top: 15px;
-	padding-left: 15px;
+	margin-top: 20px;
+	padding-left:15px;
 }
-.s-search input[type="text"] {
+
+#s-search input[type="text"] {
 	display: block;
 	width: 100%;
 	height: 40px;
-	padding: 0 45px 0 15px; 
-	border: 1px solid #e7e7e7;
+	padding: 15px 40px 15px 15px ;
 	background: #fff;
+	border: 1px solid #e7e7e7;
 	
-	-webkit-box-shadow: 0 1px 2px rgba(0,0,0, 0.06);
-	    -ms-box-shadow: 0 1px 2px rgba(0,0,0, 0.06);
+	-webkit-box-shadow: 0 1px 2px rgba(0,0,0, 0.06);	
 	   -moz-box-shadow: 0 1px 2px rgba(0,0,0, 0.06);
+	    -ms-box-shadow: 0 1px 2px rgba(0,0,0, 0.06);
 		 -o-box-shadow: 0 1px 2px rgba(0,0,0, 0.06);
-	        box-shadow: 0 1px 2px rgba(0,0,0, 0.06);
+		    box-shadow: 0 1px 2px rgba(0,0,0, 0.06);
 }
 
-.s-search input[type="text"]::-webkit-input-placeholder {
-	font-style: italic;
-	color: #C3C2C2;
-}
-.s-search input[type="text"]::-moz-placeholder {
-	font-style: italic;
-	color: #C3C2C2;
-}
-
-.s-search input[type="submit"] {
+#s-search input[type="submit"] {
 	position: absolute;
 	top: 0;
-	right: 2px;
+	right: 5px;
 	height: 40px;
-	width: 40px;
+	width: 35px;
 	border: none;
-	background: transparent url(../img/s-search-btn.png) no-repeat center;
+	background: transparent url(../img/search-submit.png) no-repeat center;
 	cursor: pointer;
 }
 
+#s-search input[type="text"]::-webkit-input-placeholder {
+	font-style: italic;
+	color: #C3C2C2;
+}
+#s-search input[type="text"]::-moz-placeholder {
+	font-style: italic;
+	color: #C3C2C2;
+}
 
-/* Контент */
-.content {margin-right: 285px;}
-
+.content {
+	margin-right: 285px;
+	margin-bottom: 10px;
+}
 
 .products {
-	width: 215px;
-	height: 370px;
 	float: left;
 	margin-right: 15px;
 	margin-bottom: 15px;
-	overflow: hidden;
-	background: #FFF;
+	width: 215px;
+	height: 370px;
+	background: #fff;
+	overflow: hidden; 
+
 	-webkit-border-radius: 5px;
 	   -moz-border-radius: 5px;
-		 -0-border-radius: 5px;
+	     -o-border-radius: 5px;
 	        border-radius: 5px;
-	-webkit-box-shadow: 0 2px 3px rgba(0,0,0,0.15);
-	   -moz-box-shadow: 0 2px 3px rgba(0,0,0,0.15);
-		-ms-box-shadow: 0 2px 3px rgba(0,0,0,0.15);
-		 -o-box-shadow: 0 2px 3px rgba(0,0,0,0.15);
-			box-shadow: 0 2px 3px rgba(0,0,0,0.15);
+
+	-webkit-box-shadow: 0 2px 3px rgba(0,0,0,.15); 
+	   -moz-box-shadow: 0 2px 3px rgba(0,0,0,.15);
+	    -ms-box-shadow: 0 2px 3px rgba(0,0,0,.15);  
+	     -o-box-shadow: 0 2px 3px rgba(0,0,0,.15); 
+			box-shadow: 0 2px 3px rgba(0,0,0,.15); 
 }
+
+.products.products-in-line{
+	margin-right: 0;
+	width: 100%;
+	height: 212px;
+	margin-bottom: 50px;
+}
+
+.products.products-in-line .p-img{
+	float: left;
+	width: 31.9%;
+}
+
+.products.products-in-line .p-footer{
+	float: right;
+	width: 66%;
+	margin-top: 30px;
+	margin-left: 2%;
+}
+
+.products.products-in-line .p-footer .add-cart{
+ 	margin-right: 50px;
+	margin-top: 20px;
+}
+
 .products:nth-child(3n) {margin-right: 0;}
 
 .p-img {
@@ -445,61 +521,71 @@ a, a:hover {color: #000; text-decoration: none;}
 	   -moz-border-radius: 5px;
 		 -0-border-radius: 5px;
 	        border-radius: 5px;
-	
-	-webkit-box-shadow: 0 1px 5px rgba(0,0,0,0.75);
-	   -moz-box-shadow: 0 1px 5px rgba(0,0,0,0.75);
-		-ms-box-shadow: 0 1px 5px rgba(0,0,0,0.75);
-		 -o-box-shadow: 0 1px 5px rgba(0,0,0,0.75);
-			box-shadow: 0 1px 5px rgba(0,0,0,0.75);
+	-webkit-box-shadow: 0 1px 5px rgba(0,0,0,.75); 
+	   -moz-box-shadow: 0 1px 5px rgba(0,0,0,.75);
+	    -ms-box-shadow: 0 1px 5px rgba(0,0,0,.75);  
+	     -o-box-shadow: 0 1px 5px rgba(0,0,0,.75); 
+			box-shadow: 0 1px 5px rgba(0,0,0,.75); 
+}
+.p-img a img {width: 100%; height: 100%;}
+
+.p-img img:hover{
+	filter: brightness(110%);
 }
 
 .sale {
 	position: absolute;
 	top: 10px;
 	left: 10px;
-	z-index: 3;
 	width: 50px;
 	height: 50px;
-	text-align: center;
-	line-height: 50px;
-	font-weight: bold;
-	font-size: 12px;
+	z-index: 3;
 	color: #fff;
-	text-transform: uppercase;
-	background: rgba(204,51,51,.6);
-	
+	text-align: center;
+	font: 12px/50px Arial, sans-serif; 
+	font-weight: bold;
+	text-transform: uppercase; 
+	background: rgba(204,51,51, .7);
+
 	-webkit-border-radius: 50%;
 	   -moz-border-radius: 50%;
-		 -0-border-radius: 50%;
-	        border-radius: 50%;
+		 -o-border-radius: 50%;
+		    border-radius: 50%;
 }
 
-.p-footer {padding: 0 8px 15px;}
-.products h6,
-.s-products-info h6 {
+.p-footer {
+	padding: 0 8px 15px;	
+}
+
+.p-footer h6, .s-products-info h6 {
 	margin: 10px 0;
 	font-size: 14px;
 	font-weight: bold;
 }
-.products h6 span {
+.p-footer h6 a:hover, .s-products-info h6:hover {text-decoration: underline;}
+.p-footer h6 span {
+	margin-left: 10px;
 	font-weight: normal;
 	font-style: italic;
+	text-decoration: none;
 }
-.products h6 a:hover,
-.s-products-info h6 a:hover { text-decoration: underline;}
-.p-footer p {margin-bottom: 15px; line-height: 20px;}
-.p-footer p strong {font-weight: bold;}
 
-.price, .price-new,
-.price-lg {
+.p-footer p {margin-bottom: 15px;}
+.p-footer strong {font-weight: bold;}
+
+.price, .price-new, .price-lg {
 	display: inline-block;
 	font-weight: bold;
 	margin-top: 5px;
 }
+
 .price-lg {font-size: 16px;}
+
 .price {
+
 	text-decoration: line-through;
 }
+
 .price-new {
 	padding: 1px 3px;
 	line-height: 16px;
@@ -513,45 +599,47 @@ a, a:hover {color: #000; text-decoration: none;}
 	font-size: 10px;
 	color: #fff;
 	text-transform: uppercase;
-	background: #1E1E20;
+	background: #1e1e20;
+
 	-webkit-border-radius: 5px;
 	   -moz-border-radius: 5px;
-		 -0-border-radius: 5px;
+	     -o-border-radius: 5px;
 	        border-radius: 5px;
 }
-
-.add-cart:hover {background: #888;}
+.add-cart:hover {
+	background: #888; 
+}
 
 .rate {
-	width: 76px;
+	width: 75px;
 	height: 15px;
-	margin: 10px 0 15px;
+	margin: 10px 0;
 	background: url(../img/star.png) repeat-x;
 }
 .rate > div {
 	height: 100%;
-	background: url(../img/star1.png) repeat-x;
+	background: url(../img/star2.png) repeat-x;
 }
-
 
 .pagination {
 	margin: 20px 0;
 	padding: 10px 15px;
+	background: #fff;
 	border: 1px solid #eaeaea;
-	background: #FFF;
 }
+
 
 .pagination ul li {
 	float: left;
 	margin-right: 10px;
 }
+
 .pagination ul a {
 	font-size: 14px;
 	font-weight: bold;
-	line-height: 18px;
+	line-height: ;
 }
-
-.pagination ul li.active a {
+.pagination ul a.active {
 	color: #cc3333;
 }
 
@@ -561,7 +649,7 @@ a, a:hover {color: #000; text-decoration: none;}
 	margin-top: -300px;
 	padding: 25px 0;
 	border-top: 5px solid #000;
-	background: #444 url(../img/f-bg.jpg) repeat;
+	background: #444 url(../img/footer-bg.jpg) repeat;
 }
 #footer p {
 	margin-bottom: 20px;
@@ -695,8 +783,6 @@ a, a:hover {color: #000; text-decoration: none;}
 	width: 30px;
 	background: url(../img/home-link.png) no-repeat;
 }
-
-
 
 
 /* Ползунок -----------------------------
@@ -1042,3 +1128,4 @@ a, a:hover {color: #000; text-decoration: none;}
     cursor: pointer;
     overflow: hidden;
 }
+
