--- a/yoga/stylesheets/screen.css
+++ b/yoga/stylesheets/screen.css
@@ -106,6 +106,8 @@ a {
 #wrapper {
   height: 100%;
   overflow: hidden;
+  max-width: 1600px;
+  margin: 0 auto;
 }
 
 .container{
@@ -448,6 +450,7 @@ a {
 .gallery {
   margin-top: 100px;
   position: relative;
+  max-width: 1600px;
 }
 
 /* line 315, ../sass/screen.scss */
@@ -546,6 +549,31 @@ a {
   width: 580px;
   height: 100%;
   border-radius: 10px;
+}
+
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+  from {
+    opacity: .4
+  }
+  to {
+    opacity: 1
+  }
+}
+
+@keyframes fade {
+  from {
+    opacity: .4
+  }
+  to {
+    opacity: 1
+  }
 }
 
 /* line 389, ../sass/screen.scss */
@@ -870,6 +898,7 @@ a {
   position: absolute;
   top: 50%;
   box-shadow: 0 0 2px rgba(0, 0, 0, 0.5);
+  cursor: pointer;
 }
 
 /* line 656, ../sass/screen.scss */
@@ -885,19 +914,29 @@ a {
   position: absolute;
   top: 50%;
   box-shadow: 0 0 2px rgba(0, 0, 0, 0.5);
+  cursor: pointer;
 }
 
 /* line 670, ../sass/screen.scss */
 .avatar-tr {
+  position: relative;
   height: 70px;
   width: 70px;
   -webkit-border-radius: 50%;
   display: inline-block;
-  background: url(../img/avatar2.jpg) center top;
   background-size: 180%;
   border: 2px solid #D7D7D7;
   margin-top: 20px;
   margin-left: 60px;
+  overflow: hidden;
+}
+
+.avatar-tr img{
+  width: 70px;
+  height: 70px;
+  position: absolute;
+  left: 50%;
+  margin-left: -35px;
 }
 
 /* line 682, ../sass/screen.scss */
@@ -929,7 +968,7 @@ a {
 }
 
 /* line 706, ../sass/screen.scss */
-.bullets .dot {
+.bullets .dot-q {
   position: relative;
   display: block;
   margin-bottom: 15px;
@@ -939,6 +978,7 @@ a {
   font-size: 1px;
   border: 2px solid #D7D7D7;
   border-radius: 50%;
+  cursor: pointer;
 }
 
 /* line 718, ../sass/screen.scss */
@@ -966,6 +1006,8 @@ a {
   position: relative;
   border-bottom: 2px solid #888CA7;
   color: #fff;
+  max-width: 1600px;
+  margin: 0 auto;
 }
 
 /* line 740, ../sass/screen.scss */
