--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
 @import url(https://fonts.googleapis.com/css?family=Raleway:400,300,500,700,800);
 @import url(https://fonts.googleapis.com/css?family=Lobster);
 
+@import url("https://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css");
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -27,7 +29,7 @@ html {
 
 body {
     height: 100%;
-    font: 13px/16px 'Open Sans', sans-serif;
+    font: 13px/16px 'Raleway', sans-serif;
     color: #000;
 }
 
@@ -112,11 +114,35 @@ a, a:hover {
 }
 
 .container .works-header{
-    margin-top: 50px;
-    color: white;
+    margin-top: 40px;
+    color: #e9e9e9;
     position: absolute;
-    font: 500 60px "Raleway", sans-serif;
+    font: 500 40px "Raleway", sans-serif;
     z-index: 9999;
+}
+
+.me {
+    margin-top: 20px;
+    z-index: 9999;
+    position: relative;
+    float: right;
+    height: 100px;
+}
+
+.me img{
+    height: 100px;
+    width: 100px;
+    border-radius: 50%;
+}
+
+.me .name{
+    float: left;
+    line-height: 100px;
+    margin-right: 10px;
+    font-family: Lobster, cursive;
+    color: #e5e5e5;
+    letter-spacing: 1px;
+    font-size: 22px;
 }
 
 .works-container {
@@ -147,4 +173,49 @@ a, a:hover {
 .works-container a:hover img {
     filter: brightness(100%);
     box-shadow: 0px 35px 50px rgba(0, 0, 0, 0.2);
+}
+
+.contact{
+    z-index: 9999;
+    width: 250px;
+    margin: 150px auto 0;
+    position: relative;
+    text-align: center;
+}
+
+.contact-header{
+    color: #e5e5e5;
+    font-size: 14px;
+    margin-bottom: 5px;
+}
+
+.social-links {
+    list-style: none;
+    padding: 0;
+}
+
+.social-links li {
+    display: inline-block;
+    margin: 5px;
+    float: left;
+}
+
+.social-links a {
+    width: 36px;
+    height: 36px;
+    display: block;
+    line-height: 35px;
+    text-align: center;
+    border: 1px solid rgba(255, 255, 255, .1);
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
+    font-size: 16px;
+    color: rgba(255, 255, 255, .2);
+    background: #222426;
+}
+
+.social-links a:hover {
+    border: 1px solid rgba(255, 255, 255, .5);
+    color: rgba(255, 255, 255, .8);
 }
