--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,6 @@
 @import url(https://fonts.googleapis.com/css?family=Raleway:400,300,500,700,800);
 @import url(https://fonts.googleapis.com/css?family=Lobster);
 
-@import url("https://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css");
 
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -94,6 +93,7 @@ a, a:hover {
     width: 100%;
     height: 100%;
     z-index: -1;
+    overflow-x: hidden;
 }
 
 .overlay{
@@ -116,10 +116,12 @@ a, a:hover {
 .container .works-header{
     margin-top: 40px;
     color: #e9e9e9;
-    position: absolute;
+    position: relative;
+    float: left;
     font: 500 40px "Raleway", sans-serif;
     z-index: 9999;
 }
+
 
 .me {
     margin-top: 20px;
@@ -129,7 +131,7 @@ a, a:hover {
     height: 100px;
 }
 
-.me img{
+.me .photo{
     height: 100px;
     width: 100px;
     border-radius: 50%;
@@ -146,40 +148,90 @@ a, a:hover {
 }
 
 .works-container {
-    padding-top: 200px;
+    padding-top: 180px;
     position: relative;
 }
 
-.works-container a{
+.works-container .work-item{
+    position: relative;
     display: block;
     float: left;
-    width: 32%;
-    margin-right: 2%;
-    height: 240px;
+    width: 31%;
+    margin-right: 3.5%;
+    height: 300px;
     z-index: 9999;
     cursor: pointer;
 }
 
-.works-container a:nth-child(3n){
-    margin-right: 0;
+.work-item a{
+    display: block;
+    width: 100%;
+    height: 240px;
+    position: relative;
+    z-index: 9999;
+    overflow: hidden;
 }
 
-.works-container a img{
-    height: 100%;
-    width: 100%;
+.work-item img{
+    position: absolute;
+    top: 0;
+    left: 50%;
+    margin-left: -190px;
+    max-height: 240px;
+    width: 380px;
     z-index: 9999;
     filter: brightness(80%);
 }
-.works-container a:hover img {
+.works-container a:hover img{
     filter: brightness(100%);
-    box-shadow: 0px 35px 50px rgba(0, 0, 0, 0.2);
+
 }
+
+.works-container a:hover{
+    -webkit-box-shadow: 10px 36px 112px 6px rgba(0,0,0,0.54);
+    -moz-box-shadow: 10px 36px 112px 6px rgba(0,0,0,0.54);
+    box-shadow: 10px 36px 112px 6px rgba(0,0,0,0.54);
+}
+
+.caption{
+    position: absolute;
+    top: 260px;
+    visibility: hidden;
+    height: 70px;
+    left: 15%;
+    width: 70%;
+    text-align: center;
+    z-index: 99;
+    font-family: "Raleway", sans-serif;
+    color: #e5e5e5;
+}
+
+.works-container .work-item:hover .caption{
+    visibility: visible;
+}
+
+.caption .project-name{
+    font-size: 17px;
+    font-weight: bold;
+}
+
+.caption .descr{
+    margin-top: 10px;
+}
+
+.works-container .work-item:nth-child(3n){
+    margin-right: 0;
+}
+
 
 .contact{
     z-index: 9999;
     width: 250px;
-    margin: 150px auto 0;
-    position: relative;
+    position: absolute;
+    left: 50%;
+    margin-left: -125px;
+    bottom: 50px;
+
     text-align: center;
 }
 
@@ -218,4 +270,130 @@ a, a:hover {
 .social-links a:hover {
     border: 1px solid rgba(255, 255, 255, .5);
     color: rgba(255, 255, 255, .8);
+}
+
+
+@media screen and (max-width: 1023px) {
+
+    .container{
+        max-width: 690px;
+        margin: 0 auto;
+    }
+
+    .container .works-header{
+        font-size: 35px;
+    }
+
+    .me .photo{
+        height: 80px;
+        width: 80px;
+        border-radius: 50%;
+    }
+    .me .name{
+        line-height: 80px;
+        font-size: 19px;
+    }
+
+    .me {
+        margin-top: 30px;
+        z-index: 9999;
+        position: relative;
+        float: right;
+        height: 80px;
+    }
+
+    .work-item {
+        height: 250px;
+    }
+
+    .work-item a{
+        height: 200px;
+    }
+
+    .work-item img {
+        height: 200px;
+        width: 300px;
+        margin-left: -150px;
+    }
+
+    .work-item .caption {
+        top: 210px;
+    }
+}
+
+@media screen and (max-width: 767px) {
+
+    .container{
+        max-width: 330px;
+        margin: 0 auto;
+    }
+
+    .works-container {
+        padding-top: 100px;
+    }
+
+    .container .works-header{
+        float: none;
+        position: relative;
+        width: 100%;
+        top: 80px;
+        font-size: 28px;
+        text-align: center;
+    }
+
+
+    .me .photo{
+        height: 70px;
+        width: 70px;
+        border-radius: 50%;
+    }
+    .me .name{
+        line-height: 70px;
+        font-size: 18px;
+    }
+
+    .me {
+        margin-top: -60px;
+        margin-right: 20px;
+        z-index: 9999;
+        position: relative;
+        float: right;
+        height: 80px;
+    }
+
+    .works-container .work-item{
+        height: 250px;
+        float: none;
+        width: 80%;
+        margin-left: 10%;
+        margin-bottom: 35px;
+    }
+
+    .works-container .work-item:last-child{
+        margin-bottom: 100px;
+    }
+
+    .work-item a{
+        height: 200px;
+
+        -webkit-box-shadow: 10px 36px 112px 6px rgba(0,0,0,0.54);
+        -moz-box-shadow: 10px 36px 112px 6px rgba(0,0,0,0.54);
+        box-shadow: 10px 36px 112px 6px rgba(0,0,0,0.54);
+    }
+
+    .work-item img {
+        max-height: 200px;
+        width: 300px;
+        margin-left: -150px;
+        filter: brightness(100%);
+    }
+
+    .work-item .caption {
+        top: 210px;
+        visibility: visible;
+    }
+
+    .contact {
+        position: relative;
+    }
 }
