--- a/css/style.css
+++ b/css/style.css
@@ -102,7 +102,7 @@ a, a:hover {
     background-repeat: repeat;
     height: 100%;
     left: 0;
-    position: fixed;
+    position: absolute;
     top: 0;
     width: 100%;
     z-index: 0;
