--- a/Neos/css/style-mobile.css
+++ b/Neos/css/style-mobile.css
@@ -4,8 +4,8 @@
     #wrapper{
         width: 100%;
         background: 0;
-        margin: 0 auto;
         overflow-x: hidden;
+        margin-right: -20px;
     }
 
     #header-wrapper{
