--- a/Neos/css/style-mobile.css
+++ b/Neos/css/style-mobile.css
@@ -247,8 +247,11 @@
     }
 
     .setup-items-container{
+        height: 800px;
+        width: 100%;
         top: 40px;
         position: relative;
+        overflow: hidden;
     }
 
     .setup-item{
