--- a/Neos/css/style-mobile.css
+++ b/Neos/css/style-mobile.css
@@ -162,7 +162,7 @@
         width: 30px;
         height: 50px;
         top: 10px;
-        left: 110%;
+        left: 100%;
         -webkit-transform: rotate(-90deg);
         -moz-transform: rotate(-90deg);
         -ms-transform: rotate(-90deg);
@@ -181,12 +181,25 @@
         top: 320px;
         left: 0;
     }
+    .price-item:nth-child(3) .item-descr{
+        width: 180px;
+        margin-left: -85px;
+        position: absolute;
+        left: 50%;
+    }
+
+    .price-item:nth-child(2) .item-descr{
+        width: 200px;
+        position: absolute;
+        left: 50%;
+        margin-left: -100px;
+    }
 
     .price-item:nth-child(3):after{
         width: 30px;
         height: 40px;
         top: 30px;
-        left: 95%;
+        left: 90%;
         -webkit-transform: rotate(-90deg);
         -moz-transform: rotate(-90deg);
         -ms-transform: rotate(-90deg);
@@ -197,7 +210,7 @@
     .price-item:nth-child(4){
         position: absolute;
         right: 0;
-        top: -60px;
+        top: -40px;
         margin-right: 0;
     }
 
@@ -209,7 +222,7 @@
     .price-item:nth-child(5){
         position: absolute;
         width: 100%;
-        bottom: -30px;
+        bottom: 0;
     }
 
     .price-item:nth-child(5) .item-descr{
@@ -227,12 +240,12 @@
     .price-item:nth-child(6){
         position: absolute;
         right: 0;
-        top: 280px;
+        top: 270px;
         padding-right: 10px;
     }
 
     .price-item:nth-child(6) img{
-        width: 120px;
+        width: 110px;
         height: 70px;
     }
 
@@ -351,6 +364,10 @@
         width: 100%;
         margin-bottom: 20px;
         font-size: 27px;
+    }
+
+    .contacts-list li a{
+        margin-left: 5px;
     }
 
 
