--- a/Neos/css/style-mobile.css
+++ b/Neos/css/style-mobile.css
@@ -155,6 +155,11 @@
         margin-left: 0;
         font-size: 50px;
         margin-bottom: 10px;
+        padding: 0;
+    }
+
+    .price-block .article-header .dots{
+        display: none;
     }
 
     .price-item{
