--- a/Neos/css/style.css
+++ b/Neos/css/style.css
@@ -1,5 +1,5 @@
 .container{
-    max-width: 1200px;
+    max-width: 1180px;
     margin: 0 auto;
     padding: 0 5px;
 }
@@ -15,38 +15,38 @@ body {
     font-weight: lighter;
     overflow-x: hidden;
     background: url("../img/background-alt2.jpg") no-repeat top center;
-    min-height: 3860px;
+    min-height: 3460px;
     height: 100%;
-    background-size: 109% 4450px;
+    background-size: 109% 4000px;
 }
 
 @media screen and (max-width: 1140px) {
     #wrapper{
-        background-size: 115% 4450px;
+        background-size: 115% 4000px;
     }
 }
 
 @media screen and (max-width: 1040px) {
     #wrapper{
-        background-size: 114% 4500px;
+        background-size: 114% 4050px;
     }
 }
 
 @media screen and (max-width: 940px) {
     #wrapper{
-        background-size: 115% 4570px;
+        background-size: 115% 4070px;
     }
 }
 
 @media screen and (max-width: 840px) {
     #wrapper{
-        background-size: 115% 4600px;
+        background-size: 115% 4100px;
     }
 }
 
 @media screen and (max-width: 800px) {
     #wrapper{
-        background-size: 116% 4650px;
+        background-size: 116% 4150px;
     }
 }
 
@@ -66,7 +66,7 @@ body {
 
 .header-nav{
     margin-top: 40px;
-    font-size: 30px;
+    font-size: 25px;
     font-weight: bold;
 }
 
@@ -84,26 +84,26 @@ body {
 
 .header-center{
     position: absolute;
-    top: 300px;
-    height: 150px;
+    top: 310px;
+    height: 120px;
     width: 100%;
     background-color: rgba(245,229,216, 0.5);
 }
 
 #logo{
-    height: 100%;
+    height: 90%;
     float: left;
     position: relative;
     top: 50%;
-    -webkit-transform: translateY(10%);
-    -ms-transform: translateY(10%);
-    transform: translateY(10%);
+    -webkit-transform: translateY(7%);
+    -ms-transform: translateY(5%);
+    transform: translateY(7%);
 }
 
 .logo-img{
     display: inline-block;
-    max-height: 90px;
-    width: 400px;
+    height: 80px;
+    width: 360px;
 }
 
 .logo-img img{
@@ -113,29 +113,28 @@ body {
 
 .logo-descr{
     display: block;
-    font-weight: lighter;
     color: #fff;
-    font-size: 30px;
+    font-size: 27px;
     text-align: right;
     word-spacing: 15px;
-    letter-spacing: 2px;
-    margin-top: 10px;
+    letter-spacing: 1px;
+    margin-top: 5px;
 }
 
 .tracking-button-block{
     float: right;
-    height: 150px;
+    height: 120px;
 }
 
 .tracking-button{
     display: block;
     width: 100%;
-    font-size: 40px;
+    font-size: 32px;
     font-weight: lighter;
-    letter-spacing: 2px;
-    background: url("../img/tracking-icon.png") no-repeat 95% center;
-    height: 150px;
-    line-height: 150px;
+    letter-spacing: 1px;
+    background: url("../img/tracking-icon.png") no-repeat 90% center;
+    height: 120px;
+    line-height: 120px;
     padding-right: 120px;
     padding-left: 15px;
 }
@@ -151,39 +150,36 @@ body {
 }
 
 
-.about-block{
-    margin-top: 160px;
-}
-
 #about-anchor{
     position: absolute;
-    top: 80px;
+    top: 0;
 }
 
 
 .article-header{
     display: inline-block;
-    font-size: 60px;
+    font-size: 50px;
     color: #fff;
     font-weight: bold;
     line-height: 55px;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
     max-width: 750px;
 }
 
 .article{
     margin-top: 35px;
     position: relative;
-    margin-bottom: 70px;
+    margin-bottom: 100px;
 }
 
 .article p {
     text-indent: 50px;
     font-size: 27px;
     font-weight: lighter;
-    line-height: 35px;
-    margin-bottom: 8px;
+    line-height: 28px;
+    margin-bottom: 20px;
     clear: both;
+    text-align: justify;
 }
 
 .article-header .text-right{
@@ -193,6 +189,11 @@ body {
 .price-block{
     margin-top: 180px;
     position: relative;
+}
+
+#price-anchor{
+    position: absolute;
+    top: -50px;
 }
 
 @media screen and (max-width: 900px) {
@@ -220,9 +221,9 @@ body {
     position: relative;
     width: 28%;
     margin-right: 8%;
-    height: 180px;
+    height: 170px;
     float: left;
-    margin-top: 50px;
+    margin-top: 0;
     margin-bottom: 30px;
 }
 .price-item:nth-child(3n){
@@ -231,8 +232,8 @@ body {
 
 .price-item:nth-child(1):after,.price-item:nth-child(3):after{
     content: '';
-    width: 40px;
-    height: 60px;
+    width: 30px;
+    height: 50px;
     background: url("../img/arrow.png") no-repeat;
     background-size: contain;
     z-index: 999;
@@ -251,7 +252,7 @@ body {
 
 
 .price-item:last-child img{
-    top: -45px;
+    margin-top: -55px;
 }
 
 .item-descr{
@@ -287,16 +288,17 @@ body {
     margin-top: -30px;
 }
 
+#setup-anchor{
+    position: absolute;
+    top: -50px;
+}
+
 @media screen and (max-width: 900px) {
     .setup-block{
         bottom: -50px;
     }
 }
 
-
-.setup-block .article-header {
-    margin-bottom: 0;
-}
 
 .setup-item {
     position: relative;
@@ -305,7 +307,6 @@ body {
     margin-right: 12.5%;
     height: 180px;
     float: left;
-    margin-top: 50px;
     margin-bottom: 30px;
 }
 
@@ -376,16 +377,15 @@ body {
     top: 20px;
 }
 
-.contact-block{
+.contact-block {
     max-width: 1000px;
-    margin: 100px auto 0;
+    margin: 150px auto 0;
     padding: 0 20px;
     color: #fff;
 }
 
 .contact-header{
-    font-size: 60px;
-    letter-spacing: 5px;
+    font-size: 50px;
     font-weight: bold;
 
 }
@@ -401,14 +401,14 @@ body {
 
 .contacts-list:last-child{
     float: right;
-    margin-top: -200px;
+    margin-top: -175px;
 }
 
 .contacts-list li{
-    font-size: 30px;
+    font-size: 28px;
     color: #fff;
     width: 100%;
-    margin-bottom: 30px;
+    margin-bottom: 15px;
     height: 45px;
 }
 
