--- a/Neos/css/style-mobile.css
+++ b/Neos/css/style-mobile.css
@@ -125,6 +125,7 @@
         margin-bottom: 0;
         text-align: left;
         font-size: 40px;
+        line-height: 45px;
     }
 
     .article p{
