--- a/RandomShaking/css/style.css
+++ b/RandomShaking/css/style.css
@@ -4,7 +4,7 @@ body {
 
 #wrpapper{
     position: relative;
-    top: 100px;
+    top: 50px;
     max-width: 1000px;
     margin: 0 auto;
 }
@@ -19,7 +19,7 @@ body {
     margin-bottom: 40px;
     height: 30px;
     line-height: 28px;
-    font-size: 18px;
+    font-size: 16px;
     border: 2px solid #fff;
     color: #fff;
     border-radius: 20px;
@@ -29,7 +29,7 @@ body {
 
 .shake-button{
     position: relative;
-    top: 350px;
+    top: 300px;
     height: 100px;
     width: 140px;
     margin: 0 auto;
@@ -54,18 +54,23 @@ body {
     to {opacity: 0;}
 }
 
+@-webkit-keyframes fadeIn {
+    from {opacity: 0;}
+    to {opacity: 1;}
+}
+
 .shaking{
     animation: shake 0.1s ease-in alternate infinite;
 }
 
 .choosed{
     position: absolute;
-    top: 100px;
+    top: 120px;
     left: 50%;
     margin-left: -150px;
-    height: 250px;
+    height: 150px;
     width: 300px;
-    line-height: 250px;
+    line-height: 150px;
     font-size: 40px;
 }
 
@@ -74,6 +79,67 @@ body {
     animation: fadeOut 1s;
 }
 
+.popup-darkness {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    display: none;
+}
 
+.darkness-toggle{
+    display: block;
+    overflow: auto;
+    filter: brightness(50%);
+    background-color: rgba(0,0,0,0.5);
+}
+
+.popup {
+    visibility: hidden;
+    position: fixed;
+    left: 50%;
+    top: 36%;
+    margin-left: -150px;
+    height: 150px;
+    width: 300px;
+    border: 2px solid #4d4d4d;
+    border-radius: 20px;
+    z-index: 999;
+    filter: none;
+    background-color: white;
+    text-align: center;
+}
+
+.popup-show{
+    visibility: visible;
+    -webkit-animation: fadeIn 1s;
+    animation: fadeIn 1s
+}
+
+.popup span{
+    font-size: 20px;
+    font-style: italic;
+    display: block;
+    margin: 40px auto 0;
+    color: #757575;
+
+}
+.popup .confirm{
+    display: block;
+    width: 140px;
+    height: 40px;
+    margin: 30px auto 0;
+    font-size: 16px;
+    line-height: 40px;
+    color: #000;
+    font-weight: bold;
+    border-radius: 20px;
+    background-color: #1DB954;
+}
+
+.popup .confirm:hover{
+    background-color: #23E166;
+}
 
 
