--- a/css/style.css
+++ b/css/style.css
@@ -94,7 +94,7 @@ a, a:hover {
     width: 100%;
     height: 100%;
     z-index: -1;
-    overflow-x: hidden;
+    overflow: hidden;
 }
 
 .overlay{
@@ -529,6 +529,10 @@ a, a:hover {
             width: 100%;
             margin-left: 0;
             left: 0;
+        }
+        .photo-large img{
+            width: 450px;
+            height: 250px;
         }
     }
 
