--- a/css/style.css
+++ b/css/style.css
@@ -472,6 +472,11 @@ a, a:hover {
         min-height: 1400px;
     }
 
+    .scroll-off{
+        width: 100%;
+        overflow-y: hidden;
+    }
+
     .works-container {
         padding-top: 100px;
     }
