--- a/Neos/css/style-mobile.css
+++ b/Neos/css/style-mobile.css
@@ -279,6 +279,7 @@
         font-size: 19px;
         line-height: 20px;
         text-align: center;
+        margin-top: 5px;
     }
 
     .setup-item:first-child:after{
